--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,21 +7,23 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="exclude"
-export_files=PackedStringArray()
+export_files=PackedStringArray("res://addons/godot-git-plugin/git_plugin.gdextension")
 include_filter="*.txt"
 exclude_filter=""
-export_path="../project exports/Wronghome/wronghome0.13.05.exe"
+export_path="../project exports/Buzzing tunnels/Buzzing Tunnels.exe"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -37,10 +39,10 @@ application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version="0.13.05"
+application/product_version="0.00.19"
 application/company_name="transit studios"
-application/product_name="wronghome"
-application/file_description=""
+application/product_name="Buzzing tunnels"
+application/file_description="WIP build of buzzing tunnels"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
@@ -81,8 +83,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../project exports/Wronghome/wronghome0.6mac.zip"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -103,7 +107,8 @@ application/short_version=""
 application/version=""
 application/copyright=""
 application/copyright_localized={}
-application/min_macos_version="10.12"
+application/min_macos_version_x86_64="10.12"
+application/min_macos_version_arm64="11.00"
 application/export_angle=0
 display/high_res=true
 application/additional_plist_content=""
@@ -141,6 +146,7 @@ codesign/entitlements/app_sandbox/files_music=0
 codesign/entitlements/app_sandbox/files_movies=0
 codesign/entitlements/app_sandbox/files_user_selected=0
 codesign/entitlements/app_sandbox/helper_executables=[]
+codesign/entitlements/additional=""
 codesign/custom_options=PackedStringArray()
 notarization/notarization=0
 privacy/microphone_usage_description=""
@@ -318,3 +324,4 @@ open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+application/min_macos_version="10.12"
